Don't listen to repetitive motif hints regarding the window border and prefer rules over them anyway

BUG: 291312
REVIEW: 103681
FIXED-IN: 4.8